Update UI and internationalization

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "@types/react-dom": "^18.2.18",
     "ajv": "^8.12.0",
     "axios": "^1.6.2",
+    "i18next": "^25.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.4.1",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "zustand": "^4.4.7"
