--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,25 @@
-# Docker 部署环境变量示例
-# 复制此文件为 .env 并根据需要修改
+# Docker deployment environment variables example
+# Copy this file to .env and modify as needed
 
-# 服务器配置
+# Server configuration
 HOST=0.0.0.0
 PORT=8000
 DEBUG=False
 
-# MQTT 配置
+# MQTT configuration
 MQTT_ENABLED=true
 MQTT_USE_BUILTIN_BROKER=true
 MQTT_PORT=1883
 MQTT_BUILTIN_PORT=1883
-# 如果使用外部 MQTT Broker，设置以下配置
+# If using external MQTT Broker, configure the following
 # MQTT_USE_BUILTIN_BROKER=false
 # MQTT_BROKER=your-mqtt-broker-host
 # MQTT_USERNAME=your-username
 # MQTT_PASSWORD=your-password
 
-# 数据库配置
+# Database configuration
 DATABASE_URL=sqlite:////app/backend/data/annotator.db
 
-# 文件存储配置
+# File storage configuration
 DATASETS_ROOT=/app/datasets
 MAX_IMAGE_SIZE_MB=10
